# ralph-beads

./: .env.example  .gitignore  .purser.example.yml  AGENTS.md  CLAUDE.md  PROMPT_build.md  PROMPT_plan.md  README.md  init.ps1  init.sh  loop.sh  pyproject.toml
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.claude/commands/: add-spec.md  build.md  create-issue.md  init.md  plan.md  status.md  triage.md
.github/: copilot-instructions.md
.github/agents/: beads-dev.agent.md  beads-pm.agent.md
docs/: CLAUDE-VSCODE-MAPPING.md
scripts/: add_spec.py  cli_utils.py  config.py  gh-changelog.sh  gh-labels.sh  gh-pr-body.sh  gh-project.sh  gh-sync.sh  gh-triage.sh  gh_changelog.py  gh_labels.py  gh_pr_body.py  gh_project.py  gh_project_setup.py  gh_remote.py  gh_sync.py  gh_triage.py  init.py  lib.py  loop.py  prereqs.py
specs/: agent-portability.md  attach-existing-project.md  core-operating-model.md  cross-platform-compatibility.md  gh-project-attach-existing.md  gh-project-create-fix.md  github-actions-automation.md  github-enterprise-support.md  github-projects-integration.md  github-repo-integration.md  improve-github-remote-detection.md  logging-migration.md  pathlib-migration.md  project-initialization.md  project-rename-purser.md  purser-workflow-diagram.md  python-code-quality-tooling.md  python-coding-conventions.md  ralph-beads-workflow-diagram.md  repository-restructuring.md  uv-friendly-python-prereq.md  uv-package-management.md
tests/: conftest.py  test_cli_utils.py  test_config.py  test_gh_labels.py  test_gh_project.py  test_gh_project_setup.py  test_gh_remote.py  test_init.py  test_lib.py  test_loop.py  test_prereqs.py  test_warehouse.py
(+21 files in other folders)
