[project]
name = "purser"
version = "0.1.0"
description = "Unified agentic AI development framework combining Ralph Loop with Beads issue tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.1a7",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
